<resources>
    <string name="app_name">TaskToDoSample</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_hint">Title:</string>
    <string name="task_list_heading">List of Tasks To Do</string>
    <string name="add_tasks">Add Tasks</string>
    <string name="taskListLabel">Task Listing</string>
    <string name="addTaskLabel">Add New Task</string>
    <string name="menu_home">Home</string>
    <string name="task_title">Task Title</string>
    <string name="task_body">Task Body</string>
    <string name="add_task_image">Add Task Image (Optional)</string>
    <string name="add_img">AddImg</string>
    <string name="image_preview">Image Preview</string>
    <string name="add_task">Add Task</string>
    <string name="update_task_header">Update Task</string>
    <string name="update_task_image">Update Task Image (Optional)</string>
    <string name="update_task_label">Update Task</string>
    <string name="complete_task">Complete Task</string>
    <string name="delete_menu_item">Delete</string>
</resources>